# slark

./: .env-example  Cargo.toml  README.md
src/: config.rs  errors.rs  main.rs
src/db/: connection.rs
src/handlers/: auth.rs  health_check.rs
src/models/: task.rs  user.rs
src/routes/: auth.rs  health_check.rs
src/utils/: response.rs
