[package]
name = "slark"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["postgres", "runtime-actix-native-tls", "macros"] }
dotenv = "0.15"
jsonwebtoken = "8"
env_logger = "0.10"
log = "0.4"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
argon2 = "0.4"
chrono = { version = "0.4", features = ["serde"] }